results/SVCOMP/4-shot/log-ExSymExeLCMP-2024_03_18_21_56_41.txt
class Main {

  //@ ensures \result == (\result == false && x + 1 > x + 2) || (\result == true && x + 1 <= x + 2);
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ ensures \result == (res + 1 > res + 2) ==> false;
  //@ ensures \result == (res + 1 <= res + 2) ==> true;
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:9: error: cannot find symbol
  //@ ensures \result == (res + 1 > res + 2) ==> false;
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:9: error: cannot find symbol
  //@ ensures \result == (res + 1 > res + 2) ==> false;
                                    ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:10: error: cannot find symbol
  //@ ensures \result == (res + 1 <= res + 2) ==> true;
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:10: error: cannot find symbol
  //@ ensures \result == (res + 1 <= res + 2) ==> true;
                                     ^
  symbol:   variable res
  location: class Main
4 errors

